Fix copy notification z-index

--- a/src/components/ShareFormation/ShareFormation.module.scss
+++ b/src/components/ShareFormation/ShareFormation.module.scss
@@ -43,6 +43,7 @@
     background-color: #338d46;
     padding: 1rem;
     text-align: center;
+    z-index: 5;
   }
 
   @media screen and (max-width: 960px) and (orientation: landscape) {
